exposek8sservices/k8s-mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-service
  template:
    metadata:
      labels:
        app: mongo-service
    spec:
      containers:
      - name: mongo-service
        image: mongo:latest
        ports:
        - containerPort: 27017
