exposek8sservices/k8s-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongo-service
