exposek8sservices/k8s-photographer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: photographer-service
spec:
  ports:
  - port: 8090
    protocol: TCP
  selector:
    app: photographer-service
